Try to fix favicon and pattern on ios

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -153,3 +153,6 @@ button svg {
 .stop {
     pointer-events: none;
 }
+.hint {
+    color: darkgray;
+}
